# meritrank-rust

./: .cursorignore  .gitignore  .rustfmt.toml  BULK_LOAD_JOURNAL.md  Cargo.toml  JOURNAL.md  LICENSE  README.md  bla.new  docker-compose.test-local.yml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build_and_test.yml  build_pgrx_toolchain.yml  publish.yml
bench/: bla.rs  test_smoke.rs
core/: Cargo.toml  README.md  rustfmt.toml
core/src/: constants.rs  counter.rs  debug.rs  errors.rs  graph.rs  lib.rs  random_walk.rs  rank.rs  walk_storage.rs
core/tests/: graph_with_zero.csv  test_common.rs  test_dumps.rs  test_memory.rs  test_meritrank.rs  test_randomwalk.rs  test_smoke.rs  test_walkstorage.rs  utils.rs
core/tests/dumps/: OUT3.csv
postgres/: Dockerfile
psql-connector/: 20_pgmer2.sh  Cargo.toml  Dockerfile  Dockerfile.pgrx-toolchain  README.md  generate_scripts.sh  pgmer2.control  run_tests_like_ci.sh  rustfmt.toml
psql-connector/src/: lib.rs  rpc.rs  testing.rs  tests.rs  types.rs
psql-connector/testdata/: edges.csv
service/: Cargo.toml  Dockerfile  LOAD_TEST_ANALYSIS.md  README.md  rustfmt.toml
service/src/: astar.rs  astar_utils.rs  aug_graph.rs  aug_multi_graph.rs  bloom_filter.rs  clustering.rs  constants.rs  data.rs  errors.rs  helpers.rs  legacy_protocol.rs  legacy_request_handler.rs  legacy_sync_state_manager.rs  legacy_tests.rs  lib.rs  log.rs  lrgraph.rs  main.rs  new_ops.rs  new_server_ops.rs  new_sever_ops.rs  node_registry.rs  nodes.rs  nonblocking_loop.rs  operations.rs  poll.rs  proc_graph.rs  proc_multigraph.rs  processor_stats.rs  protocol.rs  pushsum.rs  quantiles.rs  read.rs  read_ops.rs  request_handler.rs  request_parser.rs  request_response.rs  rpc_sync.rs  service.rs  settings.rs  (+10 more)
service/src/aug_graph/: absorb.rs  calc.rs  clustering.rs  edges.rs  graph_read.rs  impl_write.rs  legacy_2.rs  mod.rs  neighbors.rs  node_registry.rs  nodes.rs  read.rs  scores.rs  settings.rs  vsids.rs  write.rs
service/src/graph_logic/: aug_graph.rs  aug_multi_graph.rs  mod.rs  nodes.rs  poll.rs  subgraph.rs  vsids.rs  zero_opinion.rs
service/src/legacy/: bloom_filter.rs  bombard.rs  lib.rs  poll.rs  protocol.rs  read_ops.rs  request_handler.rs  state_manager.rs  subgraph.rs  tests.rs  write_ops.rs  zero_opinion.rs
service/src/libs/: clustering.rs
service/src/server/: mod.rs
service/src/server/nng/: main.rs  mod.rs  protocol.rs  read_ops.rs  request_handler.rs  state_manager.rs  write_ops.rs
service/src/server/tokio/: mod.rs  new_server_ops.rs  nonblocking_loop.rs  server.rs
service/src/tests/: mod.rs
service/src/utils/: bloom_filter.rs  log.rs  mod.rs  pushsum.rs  quantiles.rs  settings.rs
service/testdata/: edges.csv
service/tests/: aug_graph_integration.rs
src/: common.rs  constants.rs  counter.rs  debug.rs  edge.rs  errors.rs  graph.rs  lib.rs  main.rs  node.rs  poswalk.rs  random_walk.rs  rank.rs  walk.rs  walk_storage.rs
tests/: test_common.rs  test_dumps.rs  test_generate.rs  test_memory.rs  test_meritrank.rs  test_randomwalk.rs  test_smoke.rs  test_walkstorage.rs  utils.rs
