[package]
name = "meritrank2"
version = "0.5.4"
edition = "2021"
description = "Meritrank library with additional experimental functions"
license = "MIT"

[[bin]]
name = "meritrank"
path = "src/main.rs"

[[test]]
name = "test_dumps"
path = "tests/test_dumps.rs"

[lib]
name = "meritrank"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
petgraph = "0.6.3"
uuid = "1.3.3"
indexmap = "1.8.0"
fixedbitset = "0.2.0"
once_cell = "1.8.0"
ordered-float = "1.0"
num-traits = "0.2.14"
csv = "1.1.6"
flate2 = "1.0.20"
