[package]
name = "meritrank2"
version = "0.6.0"
edition = "2021"
description = "MeritRank algorithm library"
license = "MIT"

[[bin]]
name = "meritrank"
path = "src/main.rs"

[[test]]
name = "test_dumps"
path = "tests/test_dumps.rs"

[lib]
name = "meritrank"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
petgraph = "0.6.3"
once_cell = "1.8.0"
integer-hasher = "0.1.1"
intset = "1.0.2"
tinyset = "0.4.15"
indexmap = "2.2.6"

[dev-dependencies]
csv = "1.1.6"
indexmap = "2.2.6"
flate2 = "1.0.20"
