[package]
name = "meritrank_core"
version = "0.8.1"
edition = "2021"
description = "MeritRank algorithm library"
license = "MIT"

[[test]]
name = "test_dumps"
path = "tests/test_dumps.rs"

[lib]
name = "meritrank_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
once_cell = "1.8.0"
integer-hasher = "0.1.1"
intset = "1.0.2"
tinyset = "0.4.15"
indexmap = "2.2.6"
log = "0.4.22"

[dev-dependencies]
csv = "1.1.6"
indexmap = "2.2.6"
flate2 = "1.0.20"
