[package]
name = "meritrank_core"
version = "0.9.1"
edition.workspace = true
description = "MeritRank algorithm library"
license.workspace = true

[features]
expensive_tests = []

[lib]
name = "meritrank_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
rand = "0.9"
once_cell = "1.21"
integer-hasher = "0.1.1"
tinyset = "0.5"
indexmap = "2.13"
log = "0.4"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.4"
indexmap = "2.13"

