[package]
name = "pgmer2"
version = "0.3.26"
edition = "2021"

[[bin]]
name = "pgrx_embed_pgmer2"
path = "./src/pgrx_embed.rs"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg17"]
shared = []
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
meritrank_service = { path="../service" }

pgrx = "0.12.8"
nng = "1.0.1"
rmp-serde = "1.1.2"
serde = "1.0.193"
lazy_static = "1.4"

dotenv = { version = "0.15.0" }

[dev-dependencies]
pgrx-tests = "=0.12.8"
