[package]
name = "meritrank_service"
version = "0.2.56"
edition = "2021"

[features]
shared = []

[dependencies]
meritrank_core = { path = "../core" }

petgraph = "0.6.3"
serde = { version = "1.0.166", features = ["derive"] }

nng = "1.0.1"
rmp-serde = "1.1.2"
simple-pagerank = "0.2.0"

ctrlc = "3.4.4"
chrono = "0.4.38"
lru = "0.12.5"
tokio = { version = "1.45.0", features = ["full"] }
bincode = "2.0.1"
thiserror = "1.0"
left-right = "0.11.5"
rand = "0.8.5"
parking_lot = "0.12.3"
scc = "2.3.4"
async-trait = "0.1.88"
dashmap = "6.1.0"
indexmap = "2.7.0"

[dev-dependencies]
flate2 = "1.1.1"
tar = "0.4.44"
csv = "1.3.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
