[package]
name = "meritrank_service"
version = "0.4.4"
edition = "2021"

[features]
shared = []

[dependencies]
meritrank_core = { path = "../core" }

petgraph = "0.8"
serde = { version = "1.0", features = ["derive"] }

simple-pagerank = "0.2.0"

ctrlc = "3.5"
chrono = "0.4"
lru = "0.16"
tokio = { version = "1.50", features = ["full"] }
bincode = "2.0.1"
thiserror = "2.0"
left-right = "0.11"
rand = "0.9"
parking_lot = "0.12"
async-trait = "0.1"
dashmap = "6.1.0"
indexmap = "2.13"
moka = { version = "0.12", features = ["sync"] }
envy = "0.4.2"
tokio-util = "0.7"

[dev-dependencies]
flate2 = "1.1"
tar = "0.4.44"
csv = "1.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
